# urmishield

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Flaws.md  GOOGLE_LEVEL_ENGINEERING_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  build_error.txt  gradle.properties  pyproject.toml  recover_full.sh  recover_project.sh  settings.gradle.kts
app/: README.md  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/urmilabs/shield/: AppStateHolder.kt  MainActivity.kt  UrmiShieldApplication.kt
app/src/main/java/com/urmilabs/shield/ai/: AudioRecorder.kt  LiteRTClassifier.kt  ScamDetector.kt  SpeechRecognizerManager.kt  TrustScoreManager.kt
app/src/main/java/com/urmilabs/shield/analytics/: ShieldAnalytics.kt
app/src/main/java/com/urmilabs/shield/config/: FirebaseInitializer.kt  ShieldRemoteConfig.kt
app/src/main/java/com/urmilabs/shield/db/: AppDatabase.kt  CallLogDao.kt  CallLogEntity.kt
app/src/main/java/com/urmilabs/shield/di/: AppModule.kt
app/src/main/res/drawable/: ic_shield_logo.xml
app/src/main/res/layout/: overlay_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  remote_config_defaults.xml
benchmark/: build.gradle.kts
config/detekt/: detekt.yml
core/data/: build.gradle.kts  consumer-rules.pro
core/ui/: build.gradle.kts  consumer-rules.pro
core/ui/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
math_lib/: calculator.py
tests/: test_calculator.py
(+52 files in other folders)
